--- a/src/Trafi.BigQuerier/Trafi.BigQuerier.csproj
+++ b/src/Trafi.BigQuerier/Trafi.BigQuerier.csproj
@@ -4,7 +4,7 @@
     <PackageVersion>1.0.4</PackageVersion>
     <Authors>Trafi</Authors>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageProjectUrl>https://github.com/trafi/trafi-bigquerier</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/trafi/big-querier</PackageProjectUrl>
     <TargetFrameworks>netstandard1.6</TargetFrameworks>
     <DebugType>full</DebugType>
     <AssemblyName>Trafi.BigQuerier</AssemblyName>
