--- a/src/Trafi.BigQuerier/Trafi.BigQuerier.csproj
+++ b/src/Trafi.BigQuerier/Trafi.BigQuerier.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <PackageId>Trafi.BigQuerier</PackageId>
-    <PackageVersion>1.0.4</PackageVersion>
+    <PackageVersion>1.0.4-beta1</PackageVersion>
     <Authors>Trafi</Authors>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageProjectUrl>https://github.com/trafi/big-querier</PackageProjectUrl>
