--- a/src/Trafi.BigQuerier/Trafi.BigQuerier.csproj
+++ b/src/Trafi.BigQuerier/Trafi.BigQuerier.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <PackageId>Trafi.BigQuerier</PackageId>
-    <PackageVersion>1.0.4-beta1</PackageVersion>
+    <PackageVersion>1.0.0</PackageVersion>
     <Authors>Trafi</Authors>
     <Copyright>2017 TRAFI</Copyright>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
