--- a/src/Trafi.BigQuerier/Trafi.BigQuerier.csproj
+++ b/src/Trafi.BigQuerier/Trafi.BigQuerier.csproj
@@ -16,7 +16,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="10.4.0" />
-    <PackageReference Include="Google.Apis.Auth" Version="1.28.0" />
-    <PackageReference Include="Google.Cloud.BigQuery.V2" Version="1.0.0-beta17" />
+    <PackageReference Include="Google.Apis.Auth" Version="1.54.0" />
+    <PackageReference Include="Google.Cloud.BigQuery.V2" Version="1.4.1" />
   </ItemGroup>
 </Project>
