--- a/src/Trafi.BigQuerier/Trafi.BigQuerier.csproj
+++ b/src/Trafi.BigQuerier/Trafi.BigQuerier.csproj
@@ -1,18 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <PackageId>Trafi.BigQuerier</PackageId>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <PackageVersion>1.0.0</PackageVersion>
+    <LangVersion>8</LangVersion>
+
     <Authors>Trafi</Authors>
-    <Copyright>2017 TRAFI</Copyright>
+    <Copyright>2021 TRAFI</Copyright>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageProjectUrl>https://github.com/trafi/big-querier</PackageProjectUrl>
     <PackageLicenseUrl>https://raw.githubusercontent.com/trafi/big-querier/master/LICENSE</PackageLicenseUrl>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/trafi/big-querier</RepositoryUrl>
-    <TargetFramework>netstandard1.6</TargetFramework>
-    <DebugType>full</DebugType>
-    <AssemblyName>Trafi.BigQuerier</AssemblyName>
-    <RootNamespace>Trafi.BigQuerier</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="10.4.0" />
